# Divine-Spider-Astar

./: .gitignore  README.md  SNAKE_VIEWER.md  backend.py  main.py  maze.py  pyproject.toml  search.py  snake_render.py  snake_scene.py  snake_state_service.py  snake_viewer.py
.github/workflows/: tests.yml
BE/: README.md  backend.py  maze.py
BE/tests/: bigMaze.txt  test_sample.py
FE/: SNAKE_VIEWER.md  SPIDER_VIEWER.md  backend_adapter.py  frontend_state.py  simulation_backend.py  snake_render.py  snake_scene.py  snake_viewer.py  spider_render.py  spider_viewer.py
Frontend/: backend_adapter.py  frontend_state.py  simulation_backend_adapter.py  snake_viewer.py
tests/: bigMaze.txt  test_sample.py
