[project]
name = "divine-snakes-astar"
version = "0.1.0"
description = "A* homework plus independent snake scene renderer"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
